; ModuleID = '/home/carl/AnghaBench/postgres/contrib/tcn/extr_tcn.c_strcpy_quoted.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/tcn/extr_tcn.c_strcpy_quoted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i8)* @strcpy_quoted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @strcpy_quoted(i32 %0, i8* %1, i8 signext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8 %2, i8* %6, align 1
  %7 = load i32, i32* %4, align 4
  %8 = load i8, i8* %6, align 1
  %9 = call i32 @appendStringInfoCharMacro(i32 %7, i8 signext %8)
  br label %10

10:                                               ; preds = %25, %3
  %11 = load i8*, i8** %5, align 8
  %12 = load i8, i8* %11, align 1
  %13 = icmp ne i8 %12, 0
  br i1 %13, label %14, label %32

14:                                               ; preds = %10
  %15 = load i8*, i8** %5, align 8
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = load i8, i8* %6, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %17, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %14
  %22 = load i32, i32* %4, align 4
  %23 = load i8, i8* %6, align 1
  %24 = call i32 @appendStringInfoCharMacro(i32 %22, i8 signext %23)
  br label %25

25:                                               ; preds = %21, %14
  %26 = load i32, i32* %4, align 4
  %27 = load i8*, i8** %5, align 8
  %28 = load i8, i8* %27, align 1
  %29 = call i32 @appendStringInfoCharMacro(i32 %26, i8 signext %28)
  %30 = load i8*, i8** %5, align 8
  %31 = getelementptr inbounds i8, i8* %30, i32 1
  store i8* %31, i8** %5, align 8
  br label %10

32:                                               ; preds = %10
  %33 = load i32, i32* %4, align 4
  %34 = load i8, i8* %6, align 1
  %35 = call i32 @appendStringInfoCharMacro(i32 %33, i8 signext %34)
  ret void
}

declare dso_local i32 @appendStringInfoCharMacro(i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
